horizontal scroll fix

--- a/client/web/src/main/webapp/less/base.less
+++ b/client/web/src/main/webapp/less/base.less
@@ -30,14 +30,23 @@ body {
     background: @main-background-color; // url("../images/lobby/fabric-small.png") center no-repeat fixed;
     background-size: 100% 100%;
 }
+.view-port {
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    position: absolute;
+    overflow-x: hidden;
+}
 .view-container {
     top:40px;
     width:100%;
     left:0;
     position: absolute;
-    height: auto;
+    height: 100%;
 
 }
+
 
 .basic-input {
     padding:5%;
